--- a/SIWAI/nbproject/project.properties
+++ b/SIWAI/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-codec-1.9.jar=lib/commons-codec-1.9.jar
+file.reference.gson-1.7.1.jar=lib/gson-1.7.1.jar
 file.reference.mysql-connector-java-5.1.6-bin.jar=lib/mysql-connector-java-5.1.6-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
-    ${file.reference.commons-codec-1.9.jar}
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.gson-1.7.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
