--- a/SIWAI/web/WEB-INF/web.xml
+++ b/SIWAI/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>ControladorUbicacion</servlet-name>
         <servlet-class>co.edu.ufps.siwai.controlador.ControladorUbicacion</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControladorArticulo</servlet-name>
+        <servlet-class>co.edu.ufps.siwai.controlador.ControladorArticulo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControladorCliente</servlet-name>
         <url-pattern>/ControladorCliente</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>ControladorUbicacion</servlet-name>
         <url-pattern>/ControladorUbicacion</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorArticulo</servlet-name>
+        <url-pattern>/ControladorArticulo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
