Registro y consulta de comparaciones terminada

--- a/SIWAI/web/WEB-INF/web.xml
+++ b/SIWAI/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>ControladorPedido</servlet-name>
         <servlet-class>co.edu.ufps.siwai.controlador.ControladorPedido</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControladorComparacion</servlet-name>
+        <servlet-class>co.edu.ufps.siwai.controlador.ControladorComparacion</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControladorCliente</servlet-name>
         <url-pattern>/ControladorCliente</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>ControladorPedido</servlet-name>
         <url-pattern>/ControladorPedido</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorComparacion</servlet-name>
+        <url-pattern>/ControladorComparacion</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
